change proto